Fixed flex display and imported/applied new font family

--- a/starwars/src/components/StarWarsPeople.scss
+++ b/starwars/src/components/StarWarsPeople.scss
@@ -1,6 +1,12 @@
 .person-card {
     opacity: 0.75;
     width: 300px !important;
-    height: 150px;
+    height: 120px;
+    font-family: 'Darker Grotesque', sans-serif !important;
+    font-size: 1.3rem;
+
+    .stats {
+        color: tomato !important;
+    }
 
 }
