--- a/starwars/src/App.scss
+++ b/starwars/src/App.scss
@@ -5,7 +5,7 @@
     display: flex;
     flex-flow: row wrap;
     justify-content: space-evenly;
-    align-items: center;
+    align-items: baseline;
   }
 }
 .Header {
@@ -13,5 +13,6 @@
   text-shadow: 1px 1px 5px #fff;
   font-size: 3rem;
   padding: 10px 0 10px 0;
+  font-family: 'Darker Grotesque', sans-serif;
 }
 /* write your parent styles in here for your App.js */
