--- a/starwars/src/App.scss
+++ b/starwars/src/App.scss
@@ -6,12 +6,13 @@
     flex-flow: row wrap;
     justify-content: space-evenly;
     align-items: baseline;
+    margin: 10px;
   }
 }
 .Header {
   color: #443e3e;
   text-shadow: 1px 1px 5px #fff;
-  font-size: 3rem;
+  font-size: 4rem;
   padding: 10px 0 10px 0;
   font-family: 'Darker Grotesque', sans-serif;
 }
