--- a/starwars/src/App.scss
+++ b/starwars/src/App.scss
@@ -8,6 +8,14 @@
     align-items: baseline;
     margin: 10px;
   }
+
+  .footer {
+    font-family: 'Darker Grotesque', sans-serif;
+    color: darkred;
+    font-size: 2rem;
+    font-weight: 700;
+    padding: 20px 100px 20px 100px;
+  }
 }
 .Header {
   color: #443e3e;
